RESOLVED FIXED145196
[iOS] Optimized fullscreen placeholder is incorrectly sized
https://bugs.webkit.org/show_bug.cgi?id=145196
Summary [iOS] Optimized fullscreen placeholder is incorrectly sized
Jon Lee
Reported 2015-05-19 18:19:14 PDT
[iOS] Optimized fullscreen placeholder is incorrectly sized
Attachments
Patch (11.65 KB, patch)
2015-05-19 18:37 PDT, Jon Lee
dino: review+
Radar WebKit Bug Importer
Comment 1 2015-05-19 18:20:01 PDT
Jon Lee
Comment 2 2015-05-19 18:37:32 PDT
Dean Jackson
Comment 3 2015-05-19 18:47:46 PDT
Comment on attachment 253415 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=253415&action=review > Source/WebCore/ChangeLog:11 > + div serves are a multi-purpose placeholder. Typo: are -> as
Jon Lee
Comment 4 2015-05-19 20:35:28 PDT
Note You need to log in before you can comment on or make changes to this bug.