Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp
@@ -286,6 +286,9 @@ String MediaControlsHost::mediaUIImageData(const String& partID) const
 
     if (partID == "optimized-fullscreen-placeholder")
         return wkGetMediaUIImageData(wkMediaUIPartOptimizedFullscreenPlaceholder);
+
+    if (partID == "optimized-fullscreen-placeholder-text")
+        return wkGetMediaUIImageData(wkMediaUIPartOptimizedFullscreenPlaceholderText);
 #else
     UNUSED_PARAM(partID);
 #endif
